# festipin

./: .gitignore  AGENT_EXECUTION_FLOW.md  AGENT_EXTENSIBILITY_ANALYSIS.md  AGENT_ORCHESTRATION_ARCHITECTURE.md  API_DOCUMENTATION.md  COMMUNICATION_SYSTEM_ARCHITECTURE.md  CORS_FIXED.md  DAY3_COMPLETED.md  DAY4_COMPLETED.md  DAY5_COMPLETED.md  FIREBASE_FIXED.md  FIREBASE_MIGRATION_STRATEGY.md  FIREBASE_STORAGE_SETUP.md  FRONTEND_UPDATES_COMPLETE.md  GEMINI_SETUP_GUIDE.md  IMPLEMENTATION_COMPLETE.md  LOCAL_STORAGE_SETUP.md  MOTIF_API_REFERENCE.md  MOTIF_DOCUMENTATION.md  MOTIF_QUICK_START.md  NEXT_STEPS_WEEK1.md  OPTIMIZATION_COMPLETE.md  PINTEREST_ERROR_FIXED.md  PINTEREST_LIMITATIONS.md  PINTEREST_SOLUTION_COMPLETE.md  PRODUCT_ENGINEERING_SPEC.md  QUICK_FIX_404.md  QUICK_START_GUIDE.md  README.md  RUNWARE_INTEGRATION_COMPLETE.md  SAMPLE_IMAGES_GUIDE.md  SETUP_GUIDE.md  debug_components.py  festimo-yellow-green-brand-guide.html  pin2-analysis.json  pin3-analysis.json  test-party-summary.sh  test_sample_upload.sh
backend/: CASE_STUDIES.md  COMPLETE_FEATURE_SUMMARY.md  COMPLETE_SYSTEM_FLOW.md  E2E_CLI_README.md  EVENT_DRIVEN_SYSTEM_README.md  EVENT_SCHEMAS_AND_FRONTEND_INTEGRATION.md  FORCED_LLM_MODE.md  FRONTEND_INTEGRATION.md  GEMINI_LLM_INTEGRATION.md  HYBRID_INPUT_SYSTEM.md  HYBRID_TESTING_GUIDE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION_GUIDE.md  LLM_PROMPT_FLOW.md  LOGGING_GUIDE.md  LOGGING_QUICKSTART.md  LOGGING_SETUP_COMPLETE.md  LOG_EXAMPLES.md  MOCK_DATABASE_MVP_GUIDE.md  NEW_LLM_FORMAT_IMPLEMENTATION.md  OPTIMIZATION_AND_TESTING_REPORT.md  PARTY_LOGGING_GUIDE.md  PARTY_LOGGING_SUMMARY.md  PRODUCTION_ARCHITECTURE.md  PRODUCTION_READINESS_AUDIT.md  QUICK_INSTALL.sh  QUICK_START.md  REINSTALL.sh  ROUTING_AND_LOGGING_GUIDE.md  ROUTING_QUICK_REFERENCE.md  TESTING_GUIDE.md  TEST_SUITE_SUMMARY.md  demo_orchestration.py  event_primary_data.json  gemini_sys_prompt.txt  gemini_sys_response.json  party_plan_prompt_full.txt  party_plan_prompt_med.txt  (+10 more)
backend/app/: main.py
backend/app/api/routes/: event_driven.py  export.py  extraction.py  input.py  motif.py  orchestration.py  plan.py  samples.py  vision.py  websocket.py
backend/app/communication/api/: __init__.py
backend/app/communication/models/: __init__.py
backend/app/core/: config.py  errors.py  logger.py  logging.py  party_logger.py
backend/app/middleware/: __init__.py  logging_middleware.py
backend/app/models/: events.py  input.py  plan.py  vision.py
backend/app/services/: __init__.py  agent_registry.py  confidence_scorer.py  data_extraction_agent.py  enhanced_logging.py  error_handler.py  event_bus.py  event_driven_orchestrator.py  keyword_expansions.py  langgraph_orchestrator.py  llm_planner.py  local_memory_store.py  local_storage_service.py  mock_database.py  party_state_store.py  pinterest_scraper.py  plan_generator.py  simple_orchestrator.py  smart_input_router.py  storage_service.py  unified_input_processor.py  venue_database.py  vision_processor.py  vision_to_text.py  websocket_bridge.py
backend/examples/: logging_example.py
backend/scripts/: generated_plan.json  quick_test_sample.py  test_complete_flow.py  test_local_storage.py  test_pinterest_scraper.py  test_sample_images.py  test_storage.py  test_vision.py
backend/tests/: conftest.py  test_pinterest_scraper.py  test_storage_service.py  test_vision_processor.py
(+100 files in other folders)
